--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "^2.1.3",
+    "@types/jspdf": "^1.1.31",
     "cordova-android": "6.3.0",
     "cordova-pdf-generator": "file:node_modules/cordova-pdf-generator",
     "cordova-plugin-device": "^1.1.4",
@@ -33,6 +34,7 @@
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "jspdf": "^1.3.5",
     "pdfmake": "^0.1.34",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
